--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <module>hadoop</module>
         <module>zookeeper</module>
         <module>hbase</module>
+        <module>kafka</module>
     </modules>
 
     <properties>
@@ -67,6 +68,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!-- jackson -->
+        <jackson.version>2.11.2</jackson.version>
 
         <!-- hadoop -->
         <hadoop.version>3.2.1</hadoop.version>
@@ -77,6 +81,9 @@
 
         <!-- hbase -->
         <hbase.version>2.2.6</hbase.version>
+
+        <!-- kafka -->
+        <kafka.version>2.6.0</kafka.version>
 
         <!-- facilities -->
         <lombok.version>1.18.16</lombok.version>
@@ -101,6 +108,18 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- jackson -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
             <!-- hadoop -->
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
@@ -156,6 +175,13 @@
                         <artifactId>slf4j-log4j12</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <!-- kafka -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
             </dependency>
 
             <!-- facilities -->
