--- a/flink/streaming/pom.xml
+++ b/flink/streaming/pom.xml
@@ -29,24 +29,17 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dataset</artifactId>
+    <artifactId>streaming</artifactId>
     <packaging>jar</packaging>
 
     <properties>
-        <main.class>io.github.lasyard.bigdata.flink.dataset.FlinkDataSet</main.class>
+        <main.class>io.github.lasyard.bigdata.flink.streaming.FlinkStreamingSocket</main.class>
     </properties>
 
     <dependencies>
-        <!-- flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-java</artifactId>
-        </dependency>
-
-        <!-- apache commons -->
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <artifactId>flink-streaming-java_2.12</artifactId>
         </dependency>
     </dependencies>
 
