--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-streaming-java_2.12</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-clients_2.12</artifactId>
                 <version>${flink.version}</version>
             </dependency>
