--- a/flink/cep/pom.xml
+++ b/flink/cep/pom.xml
@@ -24,34 +24,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>bigdata-parent</artifactId>
+        <artifactId>flink</artifactId>
         <groupId>io.github.lasyard.bigdata</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>flink</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>dataset</module>
-        <module>streaming</module>
-        <module>timer</module>
-        <module>cep</module>
-        <module>sql</module>
-        <module>helper</module>
-    </modules>
+    <artifactId>cep</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.12</artifactId>
-            <scope>runtime</scope>
+            <artifactId>flink-cep_2.12</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-runtime-web_2.12</artifactId>
-            <scope>runtime</scope>
+            <artifactId>flink-test-utils_2.12</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- this project -->
+        <dependency>
+            <groupId>io.github.lasyard.bigdata</groupId>
+            <artifactId>flink-helper</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
