--- a/flink/helper/pom.xml
+++ b/flink/helper/pom.xml
@@ -20,38 +20,28 @@
          xsi:schemaLocation="
          http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <artifactId>bigdata-parent</artifactId>
+        <artifactId>flink</artifactId>
         <groupId>io.github.lasyard.bigdata</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>flink</artifactId>
-    <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
 
-    <modules>
-        <module>dataset</module>
-        <module>streaming</module>
-        <module>timer</module>
-        <module>cep</module>
-        <module>sql</module>
-        <module>helper</module>
-    </modules>
+    <artifactId>flink-helper</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.12</artifactId>
-            <scope>runtime</scope>
+            <artifactId>flink-streaming-java_2.12</artifactId>
         </dependency>
+
+        <!-- test -->
         <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-runtime-web_2.12</artifactId>
-            <scope>runtime</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
