--- a/flink/timer/pom.xml
+++ b/flink/timer/pom.xml
@@ -48,6 +48,12 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_2.12</artifactId>
         </dependency>
+
+        <!-- this project -->
+        <dependency>
+            <groupId>io.github.lasyard.bigdata</groupId>
+            <artifactId>flink-helper</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
