--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <module>hbase</module>
         <module>kafka</module>
         <module>flink</module>
+        <module>spark</module>
     </modules>
 
     <properties>
@@ -91,6 +92,9 @@
 
         <!-- flink -->
         <flink.version>1.11.2</flink.version>
+
+        <!-- spark -->
+        <spark.version>3.0.1</spark.version>
 
         <!-- facilities -->
         <lombok.version>1.18.16</lombok.version>
@@ -246,6 +250,19 @@
                     <exclusion>
                         <groupId>org.apache.logging.log4j</groupId>
                         <artifactId>log4j-slf4j-impl</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- spark -->
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-core_2.12</artifactId>
+                <version>${spark.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
