--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -24,26 +24,40 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>flink</artifactId>
+        <artifactId>bigdata-parent</artifactId>
         <groupId>io.github.lasyard.bigdata</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>flink-helper</artifactId>
+    <artifactId>spark</artifactId>
     <packaging>jar</packaging>
 
-    <dependencies>
-        <!-- flink -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.12</artifactId>
-        </dependency>
+    <properties>
+        <main.class>io.github.lasyard.bigdata.spark.SparkApp</main.class>
+    </properties>
 
-        <!-- test -->
+    <dependencies>
+        <!-- spark -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.12</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${main.class}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
