--- a/camel/pom.xml
+++ b/camel/pom.xml
@@ -29,38 +29,14 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>kafka</artifactId>
+    <artifactId>camel</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- jackson -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-
-        <!-- kafka -->
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-        </dependency>
-
         <!-- camel -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-base</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
