--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <module>kafka</module>
         <module>flink</module>
         <module>spark</module>
+        <module>camel</module>
     </modules>
 
     <properties>
@@ -95,6 +96,9 @@
 
         <!-- spark -->
         <spark.version>3.0.1</spark.version>
+
+        <!-- camel -->
+        <camel.version>3.6.0</camel.version>
 
         <!-- facilities -->
         <lombok.version>1.18.16</lombok.version>
@@ -265,6 +269,33 @@
                         <artifactId>slf4j-log4j12</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <!-- camel -->
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-core</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-base</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-kafka</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-test</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-test-spring</artifactId>
+                <version>${camel.version}</version>
             </dependency>
 
             <!-- facilities -->
