--- a/kafka/src/main/resources/kafka.properties
+++ b/kafka/src/main/resources/kafka.properties
@@ -13,7 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-kafka.uri=kafka:test?brokers=las1:9092&consumersCount=1&groupId=test
-kafka.write.uri=direct:writeToKafka
-kafka.read.uri=seda:readFromKafka
-test.string=Test Kafka
+bootstrap.servers=las1:9092,las2:9092,las3:9092
