--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,9 @@
         <!-- opencsv -->
         <opencsv.version>5.3</opencsv.version>
 
+        <!-- spring -->
+        <spring.version>5.3.1</spring.version>
+
         <!-- hadoop -->
         <hadoop.version>3.2.1</hadoop.version>
 
@@ -104,7 +107,11 @@
         <lombok.version>1.18.16</lombok.version>
 
         <!-- apache commons -->
+        <commons-lang3.version>3.11</commons-lang3.version>
         <commons-io.version>2.8.0</commons-io.version>
+
+        <!-- guava -->
+        <guava.version>30.0-jre</guava.version>
 
         <!-- logging -->
         <slf4j.version>1.7.30</slf4j.version>
@@ -116,6 +123,9 @@
 
         <!-- testing -->
         <junit.version>4.12</junit.version>
+
+        <!-- citrus -->
+        <citrus.version>2.8.0</citrus.version>
 
         <!-- plugins -->
         <maven-surefire.version>3.0.0-M5</maven-surefire.version>
@@ -144,6 +154,13 @@
                 <groupId>com.opencsv</groupId>
                 <artifactId>opencsv</artifactId>
                 <version>${opencsv.version}</version>
+            </dependency>
+
+            <!-- spring -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
             <!-- hadoop -->
@@ -289,6 +306,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-endpointdsl</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-test</artifactId>
                 <version>${camel.version}</version>
             </dependency>
@@ -307,9 +329,21 @@
 
             <!-- apache commons -->
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+
+            <!-- guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
             <!-- logging -->
@@ -346,6 +380,23 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+
+            <!-- citrus -->
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-core</artifactId>
+                <version>${citrus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-java-dsl</artifactId>
+                <version>${citrus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.consol.citrus</groupId>
+                <artifactId>citrus-camel</artifactId>
+                <version>${citrus.version}</version>
             </dependency>
 
             <!-- this project -->
