--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-kafka_2.11</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
 
             <!-- spark -->
             <dependency>
